# sutehai_estimator

./: .gitignore  .gitmodules  cnn1d_model.py  cnn1d_test.py  cnn1d_train.py  cnn_model.py  cnn_test.py  cnn_train.py  kyoku.py  linear_model.py  linear_test.py  linear_train.py  pai_const.py  paifu.py  paifu_data.py  paifu_utils.py  player.py  pyproject.toml
